<resources>
    <string name="app_name">E-Announce</string>
    <string name="name_of_the_event">Name of the event</string>
    <string name="date_january_01_2022">Date: January 01, 2022</string>
    <string name="time_8_00am_4_00pm">Time: 8:00am - 4:00pm</string>
    <string name="read_more">Read more</string>
    <string name="program_amp_announcements"><![CDATA[Program & Announcements]]></string>
    <string name="january_01_2020">January 01, 2020</string>
    <string name="all">All</string>
    <string name="imageprofile">imageProfile</string>
    <string name="chatbotbutton">chatBotButton</string>
    <string name="login">LOGIN</string>
</resources>