<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/programs_and_announcements_background"
    tools:context=".HomeScreenActivity">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="50dp"
        android:contentDescription="@string/imageprofile"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/programs_and_announcements_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_profile_button"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="80dp"
        android:fontFamily="@font/font_montserrat_bold"
        android:gravity="center"
        android:text="@string/program_amp_announcements"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/datePickerButton"
        style="?android:spinnerStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/font_montserrat_bold"
        android:gravity="center"
        android:paddingStart="20dp"
        android:paddingEnd="35dp"
        android:text="@string/january_01_2020"
        android:textColor="@color/off_black"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/btnAllEvents"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/eventsView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/custom_events_recyclerview_bg"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePickerButton" />

    <ImageButton
        android:id="@+id/chatBotButton"
        android:contentDescription="@string/chatbotbutton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#00F5F5F5"
        android:padding="5dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/icon_chat_bot"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/btnAllEvents"
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/font_montserrat_bold"
        android:gravity="center"
        android:text="@string/all"
        android:textColor="@color/login_and_sign_up_word"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/eventsView"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>